<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tVSaludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth"
        android:text="@string/Nuevo_Evento"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/nombreEvento"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/nameevent"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.05">

        <RadioButton
            android:id="@+id/radioFutbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/btnfutbol" />

        <RadioButton
            android:id="@+id/radioBaloncesto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnbaloncesto" />

        <RadioButton
            android:id="@+id/radioVoleibol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnvoleibol" />

        <RadioButton
            android:id="@+id/radioTenis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btntenis" />
    </RadioGroup>

    <EditText
        android:id="@+id/descEvento"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descripcion"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numParticipantes"
        app:layout_constraintVertical_bias="0.273" />

    <Button
        android:id="@+id/buttonCrear"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/crearevento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descEvento"
        app:layout_constraintVertical_bias="0.347" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/colorDanger"
        android:text="@string/CANCELAR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonCrear"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descEvento"
        app:layout_constraintVertical_bias="0.347" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:text="@string/fechaevento"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreEvento"
        app:layout_constraintVertical_bias="0.047" />

    <EditText
        android:id="@+id/fecha"
        android:layout_width="160dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.021" />

    <EditText
        android:id="@+id/hora"
        android:layout_width="162dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fecha"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/botonfecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elegirfecha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/botonhora"
        android:layout_width="128dp"
        android:layout_height="46dp"
        android:text="@string/eligehora"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonfecha"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/numParticipantes"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:ems="0"
        android:hint="@string/nparticipantes"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idSelecPista"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:text="@string/deporte"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonhora"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/idSelecPista"
        android:layout_width="139dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:text="@string/idBuscarPista"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/idPistaSeleccionada"
        android:layout_width="174dp"
        android:layout_height="73dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toEndOf="@+id/idSelecPista"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.14" />

</androidx.constraintlayout.widget.ConstraintLayout>